--- a/app/src/main/res/layout-sw600dp/trait_boolean.xml
+++ b/app/src/main/res/layout-sw600dp/trait_boolean.xml
@@ -17,9 +17,8 @@
     <Button
         android:id="@+id/clearBoolean"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:background="@android:drawable/btn_default"
         android:gravity="center"
         android:minWidth="150dp"
         android:text="@string/clear"
