--- a/app/src/main/res/layout-sw600dp/trait_categorical.xml
+++ b/app/src/main/res/layout-sw600dp/trait_categorical.xml
@@ -3,170 +3,175 @@
     android:id="@+id/categoricalLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     android:visibility="gone">
 
-    <LinearLayout
-        android:id="@+id/qPick"
-        android:layout_width="fill_parent"
+    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-
-        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:columnCount="3"
-            android:alignmentMode="alignBounds"
-            android:orientation="horizontal"
-            android:paddingTop="15dp">
-
-            <Button
-                android:id="@+id/q1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:minWidth="@dimen/button_default_width"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/q2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:minWidth="@dimen/button_default_width"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/q3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:minWidth="@dimen/button_default_width"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/q4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:minWidth="@dimen/button_default_width"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/q5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:minWidth="@dimen/button_default_width"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/q6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:minWidth="@dimen/button_default_width"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/q7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:minWidth="@dimen/button_default_width"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/q8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:minWidth="@dimen/button_default_width"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/q9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:minWidth="@dimen/button_default_width"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/q10"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:minWidth="@dimen/button_default_width"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/q11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:minWidth="@dimen/button_default_width"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/q12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:minWidth="@dimen/button_default_width"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
-
-        </GridLayout>
+        android:layout_gravity="center"
+        android:alignmentMode="alignBounds"
+        android:columnCount="3"
+        android:orientation="horizontal"
+        android:paddingTop="15dp">
 
         <Button
-            android:id="@+id/clearCatBtn"
+            android:id="@+id/q1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@android:drawable/btn_default"
+            android:layout_margin="5dp"
             android:gravity="center"
             android:minWidth="@dimen/button_default_width"
-            android:text="@string/clear"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
-    </LinearLayout>
+
+        <Button
+            android:id="@+id/q2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:minWidth="@dimen/button_default_width"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/q3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:minWidth="@dimen/button_default_width"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/q4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:minWidth="@dimen/button_default_width"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/q5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:minWidth="@dimen/button_default_width"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/q6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:minWidth="@dimen/button_default_width"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/q7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:minWidth="@dimen/button_default_width"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/q8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:minWidth="@dimen/button_default_width"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/q9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:minWidth="@dimen/button_default_width"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/q10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:minWidth="@dimen/button_default_width"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/q11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:minWidth="@dimen/button_default_width"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/q12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:gravity="center"
+            android:minWidth="@dimen/button_default_width"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+    </GridLayout>
+
+    <Button
+        android:id="@+id/clearCatBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+        android:gravity="center"
+        android:minWidth="@dimen/button_default_width"
+        android:text="@string/clear"
+        android:textColor="#000000"
+        android:textSize="@dimen/text_size_large"
+        android:textStyle="bold" />
 </LinearLayout>
