--- a/app/src/main/res/layout-sw600dp/trait_date.xml
+++ b/app/src/main/res/layout-sw600dp/trait_date.xml
@@ -65,8 +65,7 @@
                 <Button
                     android:id="@+id/minusDateBtn"
                     android:layout_width="130dp"
-                    android:layout_height="60dp"
-                    android:background="@android:drawable/btn_default"
+                    android:layout_height="wrap_content"
                     android:gravity="center|center_vertical"
                     android:text="@string/minusday"
                     android:textColor="#000000"
@@ -80,8 +79,7 @@
                 <Button
                     android:id="@+id/enterBtn"
                     android:layout_width="wrap_content"
-                    android:layout_height="60dp"
-                    android:background="@android:drawable/btn_default"
+                    android:layout_height="wrap_content"
                     android:gravity="center|center_vertical"
                     android:minWidth="130dp"
                     android:text="@string/enter"
@@ -96,8 +94,7 @@
                 <Button
                     android:id="@+id/addDateBtn"
                     android:layout_width="130dp"
-                    android:layout_height="60dp"
-                    android:background="@android:drawable/btn_default"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
                     android:minWidth="130dp"
                     android:text="@string/plusday"
@@ -117,8 +114,7 @@
                 <Button
                     android:id="@+id/noDateBtn"
                     android:layout_width="wrap_content"
-                    android:layout_height="60dp"
-                    android:background="@android:drawable/btn_default"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
                     android:minWidth="130dp"
                     android:text="@string/nodate"
@@ -129,8 +125,7 @@
                 <Button
                     android:id="@+id/clearDateBtn"
                     android:layout_width="wrap_content"
-                    android:layout_height="60dp"
-                    android:background="@android:drawable/btn_default"
+                    android:layout_height="wrap_content"
                     android:gravity="center"
                     android:minWidth="130dp"
                     android:text="@string/clear"
