--- a/app/src/main/res/layout-sw600dp/trait_percent.xml
+++ b/app/src/main/res/layout-sw600dp/trait_percent.xml
@@ -24,9 +24,8 @@
     <Button
         android:id="@+id/clearPercent"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@android:drawable/btn_default"
         android:gravity="center"
         android:minWidth="150dp"
         android:text="@string/clear"
