--- a/app/src/main/res/layout/changelog.xml
+++ b/app/src/main/res/layout/changelog.xml
@@ -20,7 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical"></LinearLayout>
+            android:orientation="vertical"/>
+
     </ScrollView>
 
     <LinearLayout
@@ -36,7 +37,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@android:drawable/btn_default"
             android:minWidth="@dimen/button_default_width"
             android:text="@string/okay"
             android:textColor="#000000"
