--- a/app/src/main/res/layout/person.xml
+++ b/app/src/main/res/layout/person.xml
@@ -4,10 +4,10 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:orientation="vertical"
+    android:paddingBottom="5dp"
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp">
+    android:paddingTop="5dp">
 
     <EditText
         android:id="@+id/firstName"
@@ -47,7 +47,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:background="@android:drawable/btn_default"
             android:minWidth="@dimen/button_default_width"
             android:text="@string/okay"
             android:textColor="#000000"
