--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,11 +17,34 @@
         <item name="colorPrimary">@color/main_primary</item>
         <item name="colorPrimaryDark">@color/main_primaryDark</item>
         <item name="colorAccent">@color/main_colorAccent</item>
+
         <item name="android:windowNoTitle">false</item>
         <item name="android:windowTitleBackgroundStyle">@android:color/transparent</item>
         <item name="windowActionBar">false</item>
         <item name="buttonStyle">@style/ButtonStyle</item>
         <item name="android:actionMenuTextAppearance">@style/AppMenuText</item>
+        <item name="android:windowTitleStyle">@style/MyTitleTextStyle</item>
+        <item name="android:background">@android:color/white</item>
+    </style>
+
+    <style name="ActivityDialog" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorPrimary">@color/main_primary</item>
+        <item name="colorPrimaryDark">@color/main_primaryDark</item>
+        <item name="colorAccent">@color/main_colorAccent</item>
+
+        <item name="android:windowTitleBackgroundStyle">@android:color/transparent</item>
+        <item name="android:windowTitleStyle">@style/MyTitleTextStyle</item>
+        <item name="android:background">@android:color/white</item>
+
+    </style>
+
+    <style name="AppAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorPrimary">@color/main_primary</item>
+        <item name="colorPrimaryDark">@color/main_primaryDark</item>
+        <item name="colorAccent">@color/main_colorAccent</item>
+
+        <item name="android:windowTitleBackgroundStyle">@android:color/transparent</item>
+        <item name="android:background">@android:color/white</item>
         <item name="android:windowTitleStyle">@style/MyTitleTextStyle</item>
     </style>
 
