--- a/app/src/main/res/layout/summary.xml
+++ b/app/src/main/res/layout/summary.xml
@@ -10,7 +10,7 @@
     android:paddingBottom="5dp">
 
     <ScrollView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="450dp"
         android:layout_weight="1">
 
