Fixed search and tutorial layout on Samsung devices Fixed an issue with trait list recycling views Fixed an issue with spaces in column names ands search

--- a/app/src/main/res/layout/traitline.xml
+++ b/app/src/main/res/layout/traitline.xml
@@ -87,6 +87,7 @@
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:background="#FFFFFF"
+        android:paddingRight="5dp"
         android:padding="3dp"
         android:src="@drawable/ic_reorder" />
 
