--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -432,6 +432,11 @@
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content" />
 
+                        <include
+                            layout="@layout/trait_location"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content" />
+
                     </LinearLayout>
                 </ScrollView>
 
