--- a/app/src/main/res/layout-sw600dp/trait_audio.xml
+++ b/app/src/main/res/layout-sw600dp/trait_audio.xml
@@ -6,28 +6,31 @@
     android:orientation="vertical"
     android:visibility="gone">
 
-    <Button
-        android:id="@+id/record"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:minWidth="150dp"
-        android:text="@string/record"
-        android:textColor="#000000"
-        android:textSize="@dimen/text_size_large"
-        android:textStyle="bold" />
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/clearRecord"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:minWidth="150dp"
-        android:text="@string/clear"
-        android:textColor="#000000"
-        android:textSize="@dimen/text_size_large"
-        android:textStyle="bold" />
+        <ImageButton
+            android:id="@+id/clearRecord"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_delete_forever" />
 
+        <ImageButton
+            android:id="@+id/record"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_delete_forever" />
+
+    </LinearLayout>
 </LinearLayout>
