--- a/app/src/main/res/layout-sw600dp/trait_boolean.xml
+++ b/app/src/main/res/layout-sw600dp/trait_boolean.xml
@@ -14,15 +14,14 @@
         android:layout_gravity="center_horizontal"
         android:src="@drawable/boolean_true" />
 
-    <Button
+    <ImageButton
         android:id="@+id/clearBoolean"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:minWidth="150dp"
-        android:text="@string/clear"
-        android:textColor="#000000"
-        android:textSize="@dimen/text_size_large"
-        android:textStyle="bold" />
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:scaleType="fitXY"
+        android:padding="10dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_delete_forever"
+        android:gravity="center" />
+
 </LinearLayout>
