--- a/app/src/main/res/layout-sw600dp/trait_categorical.xml
+++ b/app/src/main/res/layout-sw600dp/trait_categorical.xml
@@ -162,16 +162,14 @@
 
     </GridLayout>
 
-    <Button
+    <ImageButton
         android:id="@+id/clearCatBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:scaleType="fitXY"
+        android:padding="10dp"
         android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:gravity="center"
-        android:minWidth="@dimen/button_default_width"
-        android:text="@string/clear"
-        android:textColor="#000000"
-        android:textSize="@dimen/text_size_large"
-        android:textStyle="bold" />
+        android:src="@drawable/ic_delete_forever"
+        android:gravity="center" />
+
 </LinearLayout>
