--- a/app/src/main/res/layout-sw600dp/trait_counter.xml
+++ b/app/src/main/res/layout-sw600dp/trait_counter.xml
@@ -39,7 +39,6 @@
             android:orientation="horizontal"
             android:paddingTop="10dp">
 
-
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -48,34 +47,34 @@
 
                 <Button
                     android:id="@+id/minusBtn"
-                    android:layout_width="130dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     android:gravity="center|center_vertical"
                     android:text="@string/minusday"
                     android:textColor="#000000"
                     android:textSize="@dimen/text_size_large"
                     android:textStyle="bold" />
 
-                <Button
+                <ImageButton
                     android:id="@+id/clearCounterBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:minWidth="130dp"
-                    android:text="@string/clear"
-                    android:textColor="#000000"
-                    android:textSize="@dimen/text_size_large"
-                    android:textStyle="bold" />
-            </LinearLayout>
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:scaleType="fitXY"
+                    android:padding="10dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_delete_forever"
+                    android:gravity="center" />
 
+            </LinearLayout>
 
             <Button
                 android:id="@+id/addBtn"
-                android:layout_width="130dp"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:gravity="center"
                 android:minWidth="130dp"
                 android:text="@string/plusday"
+                android:layout_marginLeft="15dp"
                 android:textColor="#000000"
                 android:textSize="@dimen/text_size_xxlarge"
                 android:textStyle="bold" />
