--- a/app/src/main/res/layout-sw600dp/trait_diseaserating.xml
+++ b/app/src/main/res/layout-sw600dp/trait_diseaserating.xml
@@ -467,7 +467,7 @@
             <Button
                 android:id="@+id/rustDelim"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="75dp"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:minWidth="75dp"
@@ -476,16 +476,15 @@
                 android:textSize="@dimen/text_size_large"
                 android:textStyle="bold" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/clearRustBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:minWidth="130dp"
-                android:text="@string/clear"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:scaleType="fitXY"
+                android:padding="10dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_delete_forever"
+                android:gravity="center" />
 
         </LinearLayout>
     </LinearLayout>
