--- a/app/src/main/res/layout-sw600dp/trait_photo.xml
+++ b/app/src/main/res/layout-sw600dp/trait_photo.xml
@@ -3,8 +3,8 @@
     android:id="@+id/photoLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:visibility="gone"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="gone">
 
     <LinearLayout
         android:id="@+id/photoArea"
@@ -34,29 +34,25 @@
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/capture"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:minWidth="120dp"
-                android:text="@string/capture"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
-
-            <Button
+            <ImageButton
                 android:id="@+id/clearPhoto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:minWidth="120dp"
-                android:text="@string/clear"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
+                android:padding="10dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_delete_forever" />
+
+            <ImageButton
+                android:id="@+id/capture"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:padding="10dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/ic_camera" />
 
         </LinearLayout>
     </LinearLayout>
