--- a/app/src/main/res/layout/trait_boolean.xml
+++ b/app/src/main/res/layout/trait_boolean.xml
@@ -8,21 +8,19 @@
 
     <ImageView
         android:id="@+id/eImg"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:scaleType="fitXY"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/boolean_true" />
 
-    <Button
+    <ImageButton
         android:id="@+id/clearBoolean"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"
-        android:minWidth="@dimen/button_default_width"
-        android:text="@string/clear"
-        android:textColor="#000000"
-        android:textSize="@dimen/text_size_large"
-        android:textStyle="bold" />
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:scaleType="fitXY"
+        android:padding="10dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_delete_forever"
+        android:gravity="center" />
 </LinearLayout>
