--- a/app/src/main/res/layout/trait_counter.xml
+++ b/app/src/main/res/layout/trait_counter.xml
@@ -47,8 +47,8 @@
 
                 <Button
                     android:id="@+id/minusBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="65dp"
+                    android:layout_height="65dp"
                     android:gravity="center|center_vertical"
                     android:text="@string/minusday"
                     android:minWidth="@dimen/button_default_width"
@@ -56,22 +56,21 @@
                     android:textSize="@dimen/text_size_large"
                     android:textStyle="bold" />
 
-                <Button
+                <ImageButton
                     android:id="@+id/clearCounterBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_default_width"
-                    android:text="@string/clear"
-                    android:textColor="#000000"
-                    android:textSize="@dimen/text_size_large"
-                    android:textStyle="bold" />
+                    android:layout_width="65dp"
+                    android:layout_height="65dp"
+                    android:scaleType="fitXY"
+                    android:padding="10dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_delete_forever"
+                    android:gravity="center" />
             </LinearLayout>
 
             <Button
                 android:id="@+id/addBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="95dp"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
                 android:gravity="center"
                 android:minWidth="@dimen/button_default_width"
                 android:text="@string/plusday"
