--- a/app/src/main/res/layout/trait_date.xml
+++ b/app/src/main/res/layout/trait_date.xml
@@ -65,7 +65,7 @@
                 <Button
                     android:id="@+id/minusDateBtn"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="65dp"
                     android:gravity="center|center_vertical"
                     android:minWidth="@dimen/button_default_width"
                     android:text="@string/minusday"
@@ -73,22 +73,20 @@
                     android:textSize="@dimen/text_size_large"
                     android:textStyle="bold" />
 
-                <Button
+                <ImageButton
                     android:id="@+id/enterBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center|center_vertical"
-                    android:minWidth="@dimen/button_default_width"
-                    android:text="@string/enter"
-                    android:textColor="#000000"
-                    android:textSize="@dimen/text_size_large"
-                    android:textStyle="bold" />
-
+                    android:layout_width="65dp"
+                    android:layout_height="65dp"
+                    android:scaleType="fitXY"
+                    android:padding="10dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_save"
+                    android:gravity="center" />
 
                 <Button
                     android:id="@+id/addDateBtn"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="65dp"
                     android:gravity="center"
                     android:minWidth="@dimen/button_default_width"
                     android:text="@string/plusday"
@@ -105,17 +103,15 @@
                 android:orientation="horizontal"
                 android:paddingTop="10dp">
 
-                <Button
+                <ImageButton
                     android:id="@+id/clearDateBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:minWidth="@dimen/button_default_width"
-                    android:text="@string/clear"
-                    android:textColor="#000000"
-                    android:textSize="@dimen/text_size_large"
-                    android:textStyle="bold" />
-
+                    android:layout_width="65dp"
+                    android:layout_height="65dp"
+                    android:scaleType="fitXY"
+                    android:padding="10dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/ic_delete_forever"
+                    android:gravity="center" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
