--- a/app/src/main/res/layout/trait_location.xml
+++ b/app/src/main/res/layout/trait_location.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/audioLayout"
+    android:id="@+id/locationLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -13,7 +13,7 @@
         android:orientation="horizontal">
 
         <ImageButton
-            android:id="@+id/clearRecord"
+            android:id="@+id/clearLocationBtn"
             android:layout_width="65dp"
             android:layout_height="65dp"
             android:layout_gravity="center"
@@ -23,13 +23,13 @@
             android:src="@drawable/ic_delete_forever" />
 
         <ImageButton
-            android:id="@+id/record"
+            android:id="@+id/getLocationBtn"
             android:layout_width="65dp"
             android:layout_height="65dp"
             android:layout_gravity="center"
             android:gravity="center"
             android:padding="10dp"
             android:scaleType="fitXY"
-            android:src="@drawable/ic_delete_forever" />
+            android:src="@drawable/ic_location" />
     </LinearLayout>
 </LinearLayout>
