--- a/app/src/main/res/layout/trait_multicat.xml
+++ b/app/src/main/res/layout/trait_multicat.xml
@@ -14,16 +14,13 @@
         android:numColumns="3"
         android:paddingTop="15dp" />
 
-    <Button
+    <ImageButton
         android:id="@+id/clearMultiCatBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:scaleType="fitXY"
+        android:padding="10dp"
         android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:gravity="center"
-        android:minWidth="@dimen/button_default_width"
-        android:text="@string/clear"
-        android:textColor="#000000"
-        android:textSize="@dimen/text_size_large"
-        android:textStyle="bold" />
+        android:src="@drawable/ic_delete_forever"
+        android:gravity="center" />
 </LinearLayout>
