--- a/app/src/main/res/layout/trait_photo.xml
+++ b/app/src/main/res/layout/trait_photo.xml
@@ -34,29 +34,25 @@
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/capture"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:minWidth="@dimen/button_default_width"
-                android:text="@string/capture"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
-
-            <Button
+            <ImageButton
                 android:id="@+id/clearPhoto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:scaleType="fitXY"
+                android:padding="10dp"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:minWidth="@dimen/button_default_width"
-                android:text="@string/clear"
-                android:textColor="#000000"
-                android:textSize="@dimen/text_size_large"
-                android:textStyle="bold" />
+                android:src="@drawable/ic_delete_forever"
+                android:gravity="center" />
+
+            <ImageButton
+                android:id="@+id/capture"
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:scaleType="fitXY"
+                android:padding="10dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_camera"
+                android:gravity="center" />
 
         </LinearLayout>
     </LinearLayout>
